force-app/main/default/objects/XFILES__Link_Delivery__c/XFILES__Link_Delivery__c.object-meta.xml
<CustomObject>
    <description>Manages link tokens and accessbility</description>
    <label>Link Delivery</label>
    <nameField>
        <displayFormat>LD-{0000}</displayFormat>
        <label>Link Delivery Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Link Deliveries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>