force-app/main/default/objects/XFILES__Link_Delivery__c/fields/XFILES__Client_Details__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Client_Details__c</fullName>
    <description>Client Details (Browser, IP address..)</description>
    <inlineHelpText>Client Details (Browser, IP Address..)</inlineHelpText>
    <label>Client Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>