force-app/main/default/objects/XFILES__Link_Delivery__c/fields/XFILES__Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Is_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Locked</description>
    <inlineHelpText>Check if you want to lock the link</inlineHelpText>
    <label>Is Locked</label>
    <type>Checkbox</type>
</CustomField>