force-app/main/default/objects/XFILES__Link_Delivery__c/fields/XFILES__Link__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Link__c</fullName>
    <label>External Content Detail</label>
    <referenceTo>XFILES__External_Content_Detail__c</referenceTo>
    <relationshipLabel>Link Deliveries</relationshipLabel>
    <relationshipName>Link_Deliveries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>