force-app/main/default/objects/XFILES__Link_Delivery__c/fields/XFILES__Link_Access_Password__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Link_Access_Password__c</fullName>
    <description>Link Access password</description>
    <inlineHelpText>Link Access password</inlineHelpText>
    <label>Link Access Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>