force-app/main/default/objects/XFILES__Link_Delivery__c/fields/XFILES__Share_Type__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Share_Type__c</fullName>
    <description>Share Type (View, Download, Full)</description>
    <inlineHelpText>Share Type (View, Download, Full)</inlineHelpText>
    <label>Share Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>