force-app/main/default/objects/XFILES__Link_Delivery__c/fields/XFILES__Short_URL__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Short_URL__c</fullName>
    <description>Short URL</description>
    <inlineHelpText>Short URL</inlineHelpText>
    <label>Short URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>