force-app/main/default/objects/XFILES__Link_Delivery__c/fields/XFILES__Token__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Token__c</fullName>
    <description>One time use Token</description>
    <inlineHelpText>One time use Token</inlineHelpText>
    <label>Token</label>
    <length>200</length>
    <type>Text</type>
</CustomField>