force-app/main/default/objects/XFILES__Link_Delivery__c/fields/XFILES__Token_Expired_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Token_Expired_Date_Time__c</fullName>
    <description>Token Expired Date/Time</description>
    <inlineHelpText>Token Expired Date/Time</inlineHelpText>
    <label>Token Expired Date/Time</label>
    <type>DateTime</type>
</CustomField>